--- a/sample/src/main/res/layout/fragment_dapp.xml
+++ b/sample/src/main/res/layout/fragment_dapp.xml
@@ -3,14 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".sessions.SessionsFragment">
+    tools:context=".dapp.DappFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Session Hello"
-        android:textColor="@color/black" />
+         />
 
 </FrameLayout>
