--- a/sample/src/main/res/layout/dapp_fragment.xml
+++ b/sample/src/main/res/layout/dapp_fragment.xml
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/dapp_toolbar"
+        app:titleTextColor="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/blue"
+        app:menu="@menu/dapp_toolbar_menu" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -11,4 +21,4 @@
         android:text="Dapp"
         android:textColor="@color/black" />
 
-</FrameLayout>
+</LinearLayout>
