--- a/sample/src/main/res/menu/bottom_nav_menu.xml
+++ b/sample/src/main/res/menu/bottom_nav_menu.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/wallet"
+        android:id="@+id/walletFragment"
         android:enabled="true"
         android:icon="@drawable/ic_wallet"
         android:title="@string/wallet"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/dapp"
+        android:id="@+id/dappFragment"
         android:enabled="true"
         android:icon="@drawable/ic_dapp"
         android:title="@string/dapp"
