--- a/sample/src/main/res/menu/wallet_toolbar_menu.xml
+++ b/sample/src/main/res/menu/wallet_toolbar_menu.xml
@@ -5,10 +5,5 @@
         android:id="@+id/qrCodeScanner"
         android:icon="@drawable/ic_qr_code_scanner"
         android:title="@string/qrCode"
-        app:showAsAction="ifRoom" />
-
-    <item
-        android:id="@+id/connect"
-        android:title="@string/connect"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
 </menu>
