--- a/sample/src/main/res/menu/wallet_toolbar_menu.xml
+++ b/sample/src/main/res/menu/wallet_toolbar_menu.xml
@@ -6,4 +6,9 @@
         android:icon="@drawable/ic_qr_code_scanner"
         android:title="@string/qrCode"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/pasteUri"
+        android:title="@string/paste"
+        app:showAsAction="ifRoom" />
 </menu>
