--- a/sample/src/main/res/layout/url_dialog.xml
+++ b/sample/src/main/res/layout/url_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:autofillHints="Uri"
+        android:hint="@string/paste_uri_hint"
         android:inputType="textUri"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -21,8 +21,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="12dp"
+        android:backgroundTint="@color/blue"
         android:text="Ok"
-        android:textColor="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pasteUri" />
