--- a/sample/src/main/res/layout/url_dialog.xml
+++ b/sample/src/main/res/layout/url_dialog.xml
@@ -12,6 +12,8 @@
         android:layout_margin="16dp"
         android:hint="@string/paste_uri_hint"
         android:inputType="textUri"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
