--- a/sample/src/main/res/menu/wallet_toolbar_menu.xml
+++ b/sample/src/main/res/menu/wallet_toolbar_menu.xml
@@ -2,13 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/pasteUri"
+        android:icon="@drawable/ic_url"
+        android:title="@string/paste"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/qrCodeScanner"
         android:icon="@drawable/ic_qr_code_scanner"
         android:title="@string/qrCode"
         app:showAsAction="always" />
-
-    <item
-        android:id="@+id/pasteUri"
-        android:title="@string/paste"
-        app:showAsAction="ifRoom" />
 </menu>
